// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[[ MutateReportModal ]] renders MutateReportModal in create report mode: {"editMode":false,"level":"REPOSITORY"} 1`] = `
"<zmodal-stub title=\\"Share report\\">
  <fieldset class=\\"flex flex-col gap-y-7 p-4\\"><label for=\\"report-title\\" class=\\"w-full space-y-2 text-sm text-vanilla-200\\">
      <p class=\\"text-sm font-medium text-vanilla-100\\">Label</p>
      <zinput-stub id=\\"report-title\\" required=\\"true\\" placeholder=\\"What’s this report for?\\" size=\\"small\\" value=\\"\\"></zinput-stub>
      <p class=\\"text-xs text-vanilla-400\\">This is used for internal reference only</p>
    </label>
    <!---->
    <div class=\\"space-y-3\\">
      <toggleinput-stub input-width=\\"xx-small\\" label=\\"Restrict report access\\" input-id=\\"toggle-password-protection\\" remove-y-padding=\\"true\\" class=\\"font-medium\\"></toggleinput-stub>
      <!---->
    </div>
    <div class=\\"grid grid-cols-2\\">
      <div class=\\"flex flex-col gap-y-2\\">
        <p class=\\"text-xs font-medium uppercase tracking-wider text-vanilla-400\\">Security</p>
        <zcheckbox-stub value=\\"\\" label=\\"OWASP® Top 10\\" size=\\"small\\" class=\\"cursor-pointer\\"></zcheckbox-stub>
        <zcheckbox-stub value=\\"\\" label=\\"CWE/SANS Top 25\\" size=\\"small\\" class=\\"cursor-pointer\\"></zcheckbox-stub>
        <!---->
        <!---->
        <!---->
        <!---->
        <!---->
        <!---->
      </div>
      <div class=\\"flex flex-col gap-y-2\\">
        <p class=\\"text-xs font-medium uppercase tracking-wider text-vanilla-400\\">Insights</p>
        <!---->
        <!---->
        <zcheckbox-stub value=\\"\\" label=\\"Code Health Trend\\" size=\\"small\\" class=\\"cursor-pointer\\"></zcheckbox-stub>
        <zcheckbox-stub value=\\"\\" label=\\"Issue Distribution\\" size=\\"small\\" class=\\"cursor-pointer\\"></zcheckbox-stub>
        <zcheckbox-stub value=\\"\\" label=\\"Issues Prevented\\" size=\\"small\\" class=\\"cursor-pointer\\"></zcheckbox-stub>
        <zcheckbox-stub value=\\"\\" label=\\"Issues Autofixed\\" size=\\"small\\" class=\\"cursor-pointer\\"></zcheckbox-stub>
        <!---->
        <!---->
      </div>
    </div>
    <toggleinput-stub input-width=\\"xx-small\\" label=\\"Share historical data\\" input-id=\\"toggle-share-historical-data\\" remove-y-padding=\\"true\\" class=\\"font-medium\\"></toggleinput-stub>
  </fieldset>
</zmodal-stub>"
`;

exports[`[[ MutateReportModal ]] renders MutateReportModal in edit report mode: {"editMode":false,"level":"REPOSITORY","isRestrictedOld":true,"reportIdOld":"aa183352-4b5e-427a-ac8d-95c47c52b6a1","reportKeysOld":["owasp-top-10","sans-top-25"],"reportLabelOld":"Sample Report","shareHistoricalDataOld":true} 1`] = `
"<zmodal-stub title=\\"Share report\\">
  <fieldset class=\\"flex flex-col gap-y-7 p-4\\"><label for=\\"report-title\\" class=\\"w-full space-y-2 text-sm text-vanilla-200\\">
      <p class=\\"text-sm font-medium text-vanilla-100\\">Label</p>
      <zinput-stub id=\\"report-title\\" required=\\"true\\" placeholder=\\"What’s this report for?\\" size=\\"small\\" value=\\"\\"></zinput-stub>
      <p class=\\"text-xs text-vanilla-400\\">This is used for internal reference only</p>
    </label> <label for=\\"report-link\\" class=\\"w-full space-y-2 text-sm text-vanilla-200\\">
      <p class=\\"text-sm font-medium text-vanilla-100\\">Shareable link</p>
      <zinput-stub id=\\"report-link\\" value=\\"https://deepsource.io/report/aa183352-4b5e-427a-ac8d-95c47c52b6a1\\" read-only=\\"true\\" placeholder=\\"What’s this report for?\\"></zinput-stub>
    </label>
    <div class=\\"space-y-3\\">
      <toggleinput-stub input-width=\\"xx-small\\" label=\\"Restrict report access\\" input-id=\\"toggle-password-protection\\" remove-y-padding=\\"true\\" class=\\"font-medium\\"></toggleinput-stub>
      <!---->
    </div>
    <div class=\\"grid grid-cols-2\\">
      <div class=\\"flex flex-col gap-y-2\\">
        <p class=\\"text-xs font-medium uppercase tracking-wider text-vanilla-400\\">Security</p>
        <zcheckbox-stub value=\\"\\" label=\\"OWASP® Top 10\\" size=\\"small\\" class=\\"cursor-pointer\\"></zcheckbox-stub>
        <zcheckbox-stub value=\\"\\" label=\\"CWE/SANS Top 25\\" size=\\"small\\" class=\\"cursor-pointer\\"></zcheckbox-stub>
        <!---->
        <!---->
        <!---->
        <!---->
        <!---->
        <!---->
      </div>
      <div class=\\"flex flex-col gap-y-2\\">
        <p class=\\"text-xs font-medium uppercase tracking-wider text-vanilla-400\\">Insights</p>
        <!---->
        <!---->
        <zcheckbox-stub value=\\"\\" label=\\"Code Health Trend\\" size=\\"small\\" class=\\"cursor-pointer\\"></zcheckbox-stub>
        <zcheckbox-stub value=\\"\\" label=\\"Issue Distribution\\" size=\\"small\\" class=\\"cursor-pointer\\"></zcheckbox-stub>
        <zcheckbox-stub value=\\"\\" label=\\"Issues Prevented\\" size=\\"small\\" class=\\"cursor-pointer\\"></zcheckbox-stub>
        <zcheckbox-stub value=\\"\\" label=\\"Issues Autofixed\\" size=\\"small\\" class=\\"cursor-pointer\\"></zcheckbox-stub>
        <!---->
        <!---->
      </div>
    </div>
    <toggleinput-stub input-width=\\"xx-small\\" label=\\"Share historical data\\" input-id=\\"toggle-share-historical-data\\" remove-y-padding=\\"true\\" class=\\"font-medium\\"></toggleinput-stub>
  </fieldset>
</zmodal-stub>"
`;
